Add mock API for testing without backend authentication

--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
@@ -2594,5 +2594,8 @@
             }
         });
     </script>
+    
+    <!-- Mock API for testing without backend -->
+    <script src="mock-api.js"></script>
 </body>
 </html>
