Add mock API to all pages (email-collection, loading, results) to fix fetch errors

--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/email-collection.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/email-collection.html
@@ -626,5 +626,8 @@
             }, 100);
         });
     </script>
+    
+    <!-- Mock API for testing without backend -->
+    <script src="mock-api.js"></script>
 </body>
 </html>
