--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/results.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/results.html
@@ -1355,5 +1355,8 @@
             console.log('✅ PDF generation ready (using browser print functionality)');
         });
     </script>
+    
+    <!-- Mock API for testing without backend -->
+    <script src="mock-api.js"></script>
 </body>
 </html>
