--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/loading.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/loading.html
@@ -517,5 +517,8 @@
             if (factInterval) clearInterval(factInterval);
         });
     </script>
+    
+    <!-- Mock API for testing without backend -->
+    <script src="mock-api.js"></script>
 </body>
 </html>
