Replace mock API with real serverless functions for Notion and SendGrid integration

--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
@@ -2595,7 +2595,6 @@
         });
     </script>
     
-    <!-- Mock API for testing without backend -->
-    <script src="mock-api.js"></script>
+    <!-- Real backend API integration -->
 </body>
 </html>
