Lower header position: start 20px from top, adjust main content padding for better visibility

--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/index.html
@@ -223,7 +223,7 @@
         /* Header - TheArc Style */
         .header {
             position: fixed;
-            top: 0;
+            top: 20px;
             left: 0;
             right: 0;
             z-index: 1000;
@@ -241,6 +241,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding-top: 10px;
         }
 
         .logo {
@@ -987,9 +988,9 @@
                 height: 60px;
             }
             
-            .main-content {
-                padding-top: 60px;
-            }
+        .main-content {
+            padding-top: 80px;
+        }
             
             .header-content {
                 padding: 0 1rem;
