Fix console log to show correct API endpoint

--- a/next-app/public/screening/email-collection.html
+++ b/next-app/public/screening/email-collection.html
@@ -544,7 +544,7 @@
                 console.log('📧 Timestamp:', new Date().toISOString());
                 console.log('📧 Full data:', { email, timestamp: new Date().toISOString(), consent: true, source: 'questionnaire' });
                 
-                console.log('📧 Making API call to:', 'http://localhost:3001/api/save-email');
+                console.log('📧 Making API call to:', '/api/save-email');
                 const saveResponse = await fetch('/api/save-email', {
                     method: 'POST',
                     headers: {
